# nlp4sg

./: .gitignore  README.md  hf_token.txt  pyproject.toml  wandb_key.txt
configs/: config.yaml  config_medical.yaml
data/medical_text_summarization/: prompt.txt  schema.json
data/news_scitldr_dialog_summarization/: prompt.txt  type2idx.json
nlp4sg/: collator.py  dataset.py  eval.py  model.py  processor.py  train.py  trainer.py  utils.py
secrets/: hf_token.txt  wandb_key.txt
